--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "12.0.10",
+    "@prisma/client": "^4.5.0",
+    "next": "^12.3.1",
+    "prisma": "^4.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
